--- a/cost_control/products/templates/products/product_list.html
+++ b/cost_control/products/templates/products/product_list.html
@@ -14,42 +14,52 @@
             <h1>Product List</h1>
             <a href="{% url 'input_product' %}" class="btn btn-success btn-sm">Add Product</a>
         </div>
+        <form method="get" action="{% url 'product_list' %}" class="form-inline mb-4">
+            <div class="form-group mr-2">
+                <label for="start_date" class="mr-2">Start Date:</label>
+                <input type="date" id="start_date" name="start_date" class="form-control"
+                       value="{{ request.GET.start_date }}">
+            </div>
+            <div class="form-group mr-2">
+                <label for="end_date" class="mr-2">End Date:</label>
+                <input type="date" id="end_date" name="end_date" class="form-control"
+                       value="{{ request.GET.end_date }}">
+            </div>
+            <button type="submit" class="btn btn-primary">Filter</button>
+        </form>
         <div class="table-responsive narrow-table-container">
-            <table class="table table-bordered table-fixed">
-                <thead>
-                    <tr>
-                        <th>Purchase Date</th>
-                        <th>Category</th>
-                        <th>Subcategory</th>
-                        <th>Name</th>
-                        <th>Quantity (kg)</th>
-                        <th>Quantity (pcs)</th>
-                        <th>Price per Unit</th>
-                        <th>Total Price</th>
-                        <th>Actions</th> <!-- Добавляем столбец для кнопок -->
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for product in products %}
-                    <tr>
-                        <td>{{ product.purchase_date }}</td>
-                        <td>{{ product.category.name }}</td>
-                        <td>{{ product.subcategory.name }}</td>
-                        <td>{% if product.name %}{{ product.name }}{% else %}-{% endif %}</td>
-                        <td>{% if product.quantity_kg %}{{ product.quantity_kg }}{% else %}-{% endif %}</td>
-                        <td>{% if product.quantity_pcs %}{{ product.quantity_pcs }}{% else %}-{% endif %}</td>
-                        <td>{% if product.price_per_unit %}{{ product.price_per_unit }}{% else %}-{% endif %}</td>
-                        <td>{% if product.total_price %}{{ product.total_price }}{% else %}-{% endif %}</td>
-                        <td class="actions">
-                            <a href="{% url 'edit_product' product.id %}" class="btn btn-primary btn-sm btn-custom-edit">Edit</a>
-                            <a href="{% url 'delete_product' product.id %}" class="btn btn-danger btn-sm btn-custom-delete">Delete</a>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+        <table>
+            <thead>
+                <tr>
+                    <th>Purchase Date</th>
+                    <th>Category</th>
+                    <th>Subcategory</th>
+                    <th>Name</th>
+                    <th>Quantity (pcs)</th>
+                    <th>Price per Unit</th>
+                    <th>Total Price</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for product in products %}
+                <tr>
+                    <td>{{ product.purchase_date }}</td>
+                    <td>{{ product.category.name }}</td>
+                    <td>{{ product.subcategory.name }}</td>
+                    <td class="name-col">{% if product.name %}{{ product.name }}{% else %}-{% endif %}</td>
+                    <td class="narrow-col">{% if product.quantity_pcs %}{{ product.quantity_pcs }}{% else %}-{% endif %}</td>
+                    <td class="narrow-col">{% if product.price_per_unit %}{{ product.price_per_unit }}{% else %}-{% endif %}</td>
+                    <td class="narrow-col">{% if product.total_price %}{{ product.total_price }}{% else %}-{% endif %}</td>
+                    <td class="actions">
+                        <a href="{% url 'edit_product' product.id %}" class="btn btn-primary btn-sm btn-custom-edit">Edit</a>
+                        <a href="{% url 'delete_product' product.id %}" class="btn btn-danger btn-sm btn-custom-delete">Delete</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
         </div>
     </div>
 </body>
 </html>
-
